--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".lihatfilm" />
+        <activity android:name=".lihat" />
+        <activity android:name=".editfilm" />
+        <activity android:name=".tambahfilm" />
+        <activity android:name=".datafilm" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".editactivity" />
         <activity android:name=".tambahactivity" />
         <activity android:name=".databuku" />
